Release Notes - Metadata Aggregator - Version 0.8.0
===================================================

Highlights
   * API changes for new Shibboleth coding conventions, and in the
     use of generic types
   * Signature validation can reject empty references, blacklist
     algorithm URIs and protects against "wrapping" attacks.
   * Moved to Java 7, Apache Santuario V1.5
   * Improved CLI experience
   * bug fixes

   
API Changes
   * DomElementItem becomes DOMElementItem
   * DomElementSerializer becomes DOMElementSerializer
   * DomFilesystemSourceStage becomes DOMFilesystemSourceStage
   * DomResourceSourceStage becomes DOMResourceSourceStage
   * domResource bean properties become DOMResource
      * getDomResource becomes getDOMResource
      * setDomResource becomes setDOMResource
   * xpathExpression bean properties become XPathResource
      * getXpathExpression becomes getXPathExpression
      * setXpathExpression becomes setXPathExpression
   * xslResource bean properties become XSLResource
      * getXslResource becomes getXSLResource
      * setXslResource becomes setXSLResource
   * BaseDomTest test class becomes BaseDOMTest

** Bug
    * [MDA-44] - exceptions should be propagated up from subordinate pipelines
    * [MDA-81] - address multiple failed tests
    * [MDA-83] - PullUpCacheDurationStage ignores cacheDuration on EntityDescriptor elements
    * [MDA-87] - EntitiesDescriptorAssemblerStage does not declare namespace prefix
    * [MDA-90] - default identifier strategy used by GenerateIdStage sometimes generates bad IDs
    * [MDA-98] - review use of debug vs. trace logging in aggregator stages
    * [MDA-101] - XMLSignatureSigningStage does not work under Santuario 1.5.x
    * [MDA-112] - signature validation stage should protect against wrapping attacks

** Improvement
    * [MDA-66] - should be possible to have CLI termination without a stack dump
    * [MDA-85] - Guava Closeables.closeQuietly is deprecated